# ai-trader

./: .env.example  .gitignore  AGENT_CONTROL_REDESIGN_SUMMARY.md  AGENT_CONTROL_USAGE_GUIDE.md  AGENT_UI_COMPONENTS_GUIDE.md  BUILD_COMPLETE_SUMMARY.txt  BUILD_IN_PROGRESS.txt  CLAUDE.md  CONSERVATIVE_HYBRID_IMPLEMENTATION_COMPLETE.md  CONSERVATIVE_HYBRID_TESTING_COMPLETE.md  DISK_SPACE_OPTIMIZATION.md  DOCKER-README.md  DOCKER_REBUILD_STATUS.md  DOCUMENTATION_SUMMARY.md  Dockerfile  MODELS_README.md  MORNING_INSTRUCTIONS.md  Makefile  README.md  WFO_MIGRATION_COMPLETE.md  check-docker-status.sh  cleanup-docker-volumes.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  requirements-api.txt  requirements.txt  verify_documentation.sh
.claude/: settings.json
backend/: .dockerignore  .env.example  BAYESIAN_HPO_QUALITY_REVIEW.md  CONFIGURATION_CENTRALIZATION_CHECKLIST.md  CONFIGURATION_CENTRALIZATION_COMPLETE.md  CONFIGURATION_CENTRALIZATION_IMPLEMENTATION_PLAN.md  CONFIG_C_DEPLOYMENT_SUMMARY.md  CONFIG_C_VERIFICATION_REPORT.md  CONFIG_DEDUPLICATION_COMPLETE.md  CONSERVATIVE_HYBRID_IMPLEMENTATION.md  DATABASE_MIGRATION.md  DOCUMENTATION-VALIDATION-SUMMARY.md  DOCUMENTATION-VALIDATION-TEST-REPORT.md  DYNAMIC_THRESHOLD_BACKTEST_QUICKSTART.md  DYNAMIC_THRESHOLD_IMPLEMENTATION.md  Dockerfile  Dockerfile.agent  ENHANCED_META_FEATURES_IMPLEMENTATION.md  FEATURE_GENERATION_COMPARISON.md  FEATURE_MISMATCH_FIX.md  GRADIENT_BOOSTING_TEST_SUMMARY.md  HARDCODED_CONFIG_AUDIT.md  HARDCODED_INDICATORS_AND_HYPERPARAMS.md  IMPLEMENTATION_VERIFICATION.md  LIGHTGBM_CATBOOST_IMPLEMENTATION.md  PHASE-9-VALIDATION-DELIVERABLES.md  PHASE4_ARCHITECTURE_DIAGRAM.txt  PHASE4_FILES_MANIFEST.txt  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  PHASE_6_SAFETY_SYSTEMS_COMPLETE.md  SAFETY_SYSTEMS_QUICK_REFERENCE.md  STACKING_FIX_VERIFICATION_REPORT.md  VALIDATION-QUICK-START.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WEEK2_CONFIGURATION_MIGRATION_SUMMARY.md  WEEK3_HYPERPARAMETER_MIGRATION_SUMMARY.md  WEEK4_CONFIGURATION_CENTRALIZATION_COMPLETE.md  WEEK_5_TESTING_AND_DEPLOYMENT_COMPLETE.md  (+23 more)
checkpoints/: early_stop_test_state.json  integration_test_state.json  multi_arch_test_state.json  no_early_stop_state.json  test_run_state.json
configs/: timeframe_transform.yaml
docs/: 01-architecture-overview.md  02-technical-analysis-model-design.md  03-technical-indicators-configuration.md  04-confidence-uncertainty-system.md  04-sentiment-integration-design.md  05-regime-detection-analysis.md  05-trading-robot-design.md  06-implementation-plan.md  06-web-showcase-implementation-plan.md  07-backend-implementation-prompt.md  07-continuation-prompt.md  08-multi-timeframe-ensemble-implementation.md  09-mtf-ensemble-implementation-prompt.md  10-mtf-ensemble-improvements.md  CHANGELOG.md  (+24 more)
(+1266 files in other folders)
